--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,33 @@ d3 {
   margin: 10px;
 }
 
+.havana {
+  font-family: Havana !important;
+}
+
+d1.havana {
+  font-size: 40px;
+}
+
+copy {
+  user-select: text;
+}
+
+copy[onclick] {
+  cursor: pointer;
+  transition: 300ms;
+  border-bottom: 3px dashed transparent;
+}
+
+copy[onclick]:hover {
+  border-bottom: 3px dashed #aaa;
+}
+
+copy::selection {
+  background-color: rgba(250, 120, 0, 0.5);
+  color: white;
+}
+
 side {
   display: flex;
 }
@@ -102,7 +129,7 @@ side img#contact {
   height: 100%;
   background-color: #333;
   color: #ddd;
-  font-family: Lato, Verdana, sans-serif;
+  font-family: Custom, Verdana, sans-serif;
   text-align: center;
 }
 
@@ -122,7 +149,7 @@ side img#contact {
   border: none;
   background-color: #222;
   font-size: 25px;
-  font-family: Lato, Verdana, sans-serif;
+  font-family: Custom, Verdana, sans-serif;
   font-weight: 100;
   padding: 20px;
   border-radius: 10px;
@@ -165,7 +192,7 @@ header img {
 header p {
   display: inline-block;
   vertical-align: middle;
-  font-family: Lato, Verdana, sans-serif;
+  font-family: Custom, Verdana, sans-serif;
   font-weight: 100;
   font-size: 50px;
   color: #aaa;
@@ -174,11 +201,11 @@ header p {
 }
 
 @font-face {
-  font-family: Lato;
+  font-family: Custom;
   src: url("lato.ttf");
 }
 
 @font-face {
-  font-family: Riffic;
-  src: url("riffic.ttf");
+  font-family: Havana;
+  src: url("havana.ttf");
 }
