--- a/src/style.sass
+++ b/src/style.sass
@@ -21,8 +21,9 @@ d3
 
 .havana
   font-family: Havana !important
-d1.havana
   font-size: 40px
+.footer
+  font-size: 18px
 
 copy
   user-select: text
