--- a/app/public/bin/css/toolbar.css
+++ b/app/public/bin/css/toolbar.css
@@ -909,12 +909,12 @@ disabled[disabled="false"] {
   perspective: 500px;
 }
 
-.toolbar #insert {
+.toolbar #design {
   display: none;
   vertical-align: middle;
 }
 
-.toolbar #insert #image {
+.toolbar #design #image {
   display: inline-block;
   width: 39px;
   height: 39px;
@@ -929,7 +929,45 @@ disabled[disabled="false"] {
   cursor: pointer;
 }
 
-.toolbar #insert #image:hover {
+.toolbar #design #image:hover {
+  background-color: #555;
+}
+
+.toolbar #design #bg {
+  display: inline-block;
+  width: 28px;
+  height: 39px;
+  margin: 5px;
+  padding: 0 5px 0 5px;
+  border: 1px solid #444;
+  transition: 300ms;
+  background-image: url("../../arts/bg.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.toolbar #design #bg:hover {
+  background-color: #555;
+}
+
+.toolbar #design #fg {
+  display: inline-block;
+  width: 28px;
+  height: 39px;
+  margin: 5px;
+  padding: 0 5px 0 5px;
+  border: 1px solid #444;
+  transition: 300ms;
+  background-image: url("../../arts/fg.png");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.toolbar #design #fg:hover {
   background-color: #555;
 }
 
