--- a/app/public/bin/css/toolbar.sass
+++ b/app/public/bin/css/toolbar.sass
@@ -726,7 +726,7 @@ disabled[disabled="false"]
   user-select: none
   perspective: 500px
 
-  #insert
+  #design
     display: none
     vertical-align: middle
     #image
@@ -738,6 +738,36 @@ disabled[disabled="false"]
       border: 1px solid $border
       transition: 300ms
       background-image: url("../../arts/image.png")
+      background-position: center
+      background-size: contain
+      background-repeat: no-repeat
+      cursor: pointer
+      &:hover
+        background-color: #555
+    #bg
+      display: inline-block
+      width: 28px
+      height: 39px
+      margin: 5px
+      padding: 0 5px 0 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../../arts/bg.png")
+      background-position: center
+      background-size: contain
+      background-repeat: no-repeat
+      cursor: pointer
+      &:hover
+        background-color: #555
+    #fg
+      display: inline-block
+      width: 28px
+      height: 39px
+      margin: 5px
+      padding: 0 5px 0 5px
+      border: 1px solid $border
+      transition: 300ms
+      background-image: url("../../arts/fg.png")
       background-position: center
       background-size: contain
       background-repeat: no-repeat
