--- a/app/public/bin/css/toolbar.sass
+++ b/app/public/bin/css/toolbar.sass
@@ -744,7 +744,7 @@ disabled[disabled="false"]
       cursor: pointer
       &:hover
         background-color: #555
-    #bg
+    #bg-text
       display: inline-block
       width: 28px
       height: 39px
@@ -757,9 +757,10 @@ disabled[disabled="false"]
       background-size: contain
       background-repeat: no-repeat
       cursor: pointer
+      box-shadow: 0 0 20px #2a2a2a inset
       &:hover
         background-color: #555
-    #fg
+    #fg-text
       display: inline-block
       width: 28px
       height: 39px
@@ -772,6 +773,7 @@ disabled[disabled="false"]
       background-size: contain
       background-repeat: no-repeat
       cursor: pointer
+      box-shadow: 0 0 20px #2a2a2a inset
       &:hover
         background-color: #555
 
