--- a/app/public/bin/css/toolbar.sass
+++ b/app/public/bin/css/toolbar.sass
@@ -936,6 +936,25 @@ disabled[disabled="false"]
     &:hover
       background-color: #555
 
+  input[font-size]
+    padding: 10px
+    background-color: #2a2a2a
+    color: white
+    border: 1px solid $border
+    transition: 300ms
+    cursor: text
+    width: 50px
+    text-align: center
+    &:hover
+      background-color: #555
+    &::selection
+      background-color: rgba(255,150,0,0.5)
+      color: #fff
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button
+    -webkit-appearance: none
+    margin: 0
+
   option
 
     &[a]
