--- a/src/style.sass
+++ b/src/style.sass
@@ -84,7 +84,8 @@ side
     z-index: 0
     background-size: cover
     background-position: center center
-    background-image: url('../images/odyssey.png')
+    background-image: url('../images/bg.png')
+    animation: intro 2s
   #content
     font-weight: 100
     position: relative
@@ -158,3 +159,9 @@ header
 @font-face
   font-family: Havana
   src: url('havana.ttf')
+
+@keyframes intro
+  0%
+    filter: blur(100px) grayscale(100%)
+  100%
+    filter: blur(0px)
