Added multiplatform version

--- a/src/style.css
+++ b/src/style.css
@@ -160,6 +160,7 @@ side img#contact {
   box-shadow: 0 5px 20px #111;
   outline: none;
   vertical-align: middle;
+  margin: 0 20px 0 20px;
 }
 
 #cont #content button#download img {
