--- a/src/style.sass
+++ b/src/style.sass
@@ -118,6 +118,7 @@ side
       box-shadow: 0 5px 20px #111
       outline: none
       vertical-align: middle
+      margin: 0 20px 0 20px
       img
         vertical-align: middle
         margin-left: 10px
