--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,23 @@ body {
   user-select: none;
 }
 
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #222;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
 d {
   color: #111;
 }
@@ -142,6 +159,10 @@ side img#contact {
   border-bottom: 4px #222 dashed;
 }
 
+#cont #content d1#title.orange {
+  border-bottom: 4px orange dashed !important;
+}
+
 #cont #content d2#download {
   font-size: 40px;
 }
@@ -201,6 +222,50 @@ header p {
   color: #aaa;
   margin: 15px 0 15px 0;
   user-select: none;
+}
+
+#gradient {
+  width: 100vw;
+  height: 10vh;
+  background: linear-gradient(transparent, #222);
+  position: absolute;
+  display: inline-block;
+  bottom: 0px;
+}
+
+#arrow {
+  content: "";
+  width: 10vh;
+  height: 10vh;
+  background-image: url("../images/arrow.png");
+  background-size: cover;
+  background-position: center;
+  display: inline-block;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  filter: drop-shadow(0 0 10px black);
+  cursor: pointer;
+  transform-origin: center;
+  transform: translate(-50%, -10px);
+  transition: transform 300ms;
+}
+
+#arrow:hover {
+  transform: translate(-50%, 0);
+}
+
+#jumbotron {
+  position: absolute;
+  top: 125px;
+  right: 50px;
+  font-size: 70px;
+  font-family: Havana;
+  color: #ccc;
+  text-shadow: 0 0 10px black;
+  background-color: #222;
+  padding: 25px;
+  box-shadow: 0 0 25px #222;
 }
 
 @font-face {
