--- a/app/public/styles/sass/toolbar.sass
+++ b/app/public/styles/sass/toolbar.sass
@@ -45,7 +45,7 @@
     vertical-align: middle
     color: #aaa
     background-color: #222
-    border: 1px solid #333
+    border: 1px solid #111
     padding: 2vw
     text-align: center
     margin: 10px
@@ -397,7 +397,7 @@ canvas#move
   vertical-align: middle
   #title,#author
     display: inline-block
-    background-color: #222
+    background-color: #2a2a2a
     color: #aaa
     padding: 5px
     margin: 5px
@@ -405,13 +405,14 @@ canvas#move
     transition: 300ms
     border-radius: 30px
     caret-color: #aaa
+    border-bottom: 1.5px solid #222
     &::selection
       background-color: rgba(255,150,0,0.5)
       color: #fff
     &:hover
-      background-color: #111
+      background-color: #222
   #all-keys
-    background-color: #252525
+    background-color: #2a2a2a
     border-radius: 30px
     display: inline-block
     padding: 2px
@@ -425,7 +426,7 @@ canvas#move
       padding-right: 5px
     #keys
       display: inline-block
-      background-color: #222
+      background-color: #2a2a2a
       color: #aaa
       padding: 5px
       margin: 5px
@@ -433,11 +434,12 @@ canvas#move
       transition: 300ms
       border-radius: 30px
       caret-color: #aaa
+      border-bottom: 1.5px solid #222
       &::selection
         background-color: rgba(255,150,0,0.5)
         color: #fff
       &:hover
-        background-color: #111
+        background-color: #222
 
 
 #pages
@@ -826,7 +828,7 @@ disabled[disabled="false"]
       width: 28px
       height: 28px
       margin: 5px 5px 5px 10px
-      border: 1px solid $border
+      border: 1px solid #2a2a2a
       transition: 300ms
       background-image: url("../../arts/alignLeft.png")
       background-position: center
@@ -840,7 +842,7 @@ disabled[disabled="false"]
       width: 28px
       height: 28px
       margin: 5px
-      border: 1px solid $border
+      border: 1px solid #2a2a2a
       transition: 300ms
       background-image: url("../../arts/alignCenter.png")
       background-position: center
@@ -854,7 +856,7 @@ disabled[disabled="false"]
       width: 28px
       height: 28px
       margin: 5px
-      border: 1px solid $border
+      border: 1px solid #2a2a2a
       transition: 300ms
       background-image: url("../../arts/alignRight.png")
       background-position: center
@@ -868,7 +870,7 @@ disabled[disabled="false"]
       width: 28px
       height: 28px
       margin: 5px
-      border: 1px solid $border
+      border: 1px solid #2a2a2a
       transition: 300ms
       background-image: url("../../arts/alignJustify.png")
       background-position: center
@@ -889,7 +891,7 @@ disabled[disabled="false"]
     border: 1px solid transparent
     &:hover
       background-color: $border
-      border: 1px solid $border
+      // border: 1px solid $border
 
   div#logo
     display: inline-block
@@ -918,7 +920,7 @@ disabled[disabled="false"]
   span
     margin: 10px
     padding: 10px
-    border: 1px solid $border
+    border: 1px solid #2a2a2a
     cursor: pointer
     transition: 300ms
     vertical-align: middle
@@ -930,9 +932,10 @@ disabled[disabled="false"]
     padding: 10px
     background-color: #2a2a2a
     color: white
-    border: 1px solid $border
+    border: 1px solid #2a2a2a
     transition: 300ms
     cursor: pointer
+    border-bottom: 1.5px solid #444
     &:hover
       background-color: #555
 
@@ -940,7 +943,7 @@ disabled[disabled="false"]
     padding: 10px
     background-color: #2a2a2a
     color: white
-    border: 1px solid $border
+    border: 1px solid #2a2a2a
     transition: 300ms
     cursor: text
     width: 50px
