--- a/app/public/styles/css/settings.css
+++ b/app/public/styles/css/settings.css
@@ -4,6 +4,7 @@
   transition: 300ms;
   z-index: 19; }
   .settings .setting {
+    position: relative;
     width: 80vw;
     height: 80vh;
     background-color: #222;
@@ -28,7 +29,8 @@
       -webkit-box-shadow: inset 0 0 6px #222;
       background-color: #333; }
     .settings .setting .tools {
-      user-select: none; }
+      user-select: none;
+      height: 80px; }
       .settings .setting .tools div:first-child {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px; }
@@ -51,23 +53,66 @@
         box-shadow: 0 0 10px #930 inset; }
         .settings .setting .tools .quit:hover {
           background-color: #933; }
-    .settings .setting #options {
+    .settings .setting #skins {
+      width: calc(100% - 30px);
       display: block;
-      height: 100%;
+      color: white;
+      height: auto;
+      position: absolute;
+      top: 80px;
       background-color: #2a2a2a;
-      border-radius: 10px;
+      border-radius: 20px;
       margin: 10px;
       user-select: none;
-      cursor: default; }
+      cursor: default;
+      padding: 10px;
+      transition: 300ms transform;
+      transform: translate(125%, 0); }
+      .settings .setting #skins h1 {
+        font-family: Lato;
+        color: #aaa;
+        padding-top: 20px;
+        margin-top: 0; }
+      .settings .setting #skins .theme {
+        display: inline-block;
+        margin-left: 2vw;
+        margin-right: 2vw; }
+        .settings .setting #skins .theme p {
+          font-family: Lato; }
+        .settings .setting #skins .theme img {
+          border-radius: 50px;
+          width: 300px;
+          height: 300px;
+          box-shadow: 0 0 10px black;
+          cursor: pointer;
+          transition: 300ms; }
+          .settings .setting #skins .theme img:hover {
+            transform: scale(0.9); }
+    .settings .setting #options {
+      position: absolute;
+      top: 80px;
+      width: calc(100% - 10px);
+      display: block;
+      height: auto;
+      background-color: #2a2a2a;
+      border-radius: 20px;
+      margin: 10px;
+      user-select: none;
+      cursor: default;
+      transition: 300ms transform;
+      margin-right: 10px; }
       .settings .setting #options h1 {
         font-family: Lato;
         color: #aaa;
-        padding-top: 20px; }
+        padding-top: 20px;
+        margin-top: 0; }
       .settings .setting #options div {
         margin: 5px;
         padding: 10px;
         border-bottom: 2px solid #333;
         display: flex; }
+        .settings .setting #options div:last-child {
+          border-bottom: 0 solid transparent; }
         .settings .setting #options div span {
           flex: 1;
           color: #aaa;
